--- a/calculator.html
+++ b/calculator.html
@@ -423,6 +423,24 @@
   showBtn.onclick = openSizingPanel;
   sizingOverlay.onclick = closeSizingPanel;
   closeBtn.onclick = closeSizingPanel;
+
+
+document.addEventListener('DOMContentLoaded', function() {
+  document.body.addEventListener('click', function(e) {
+    const header = document.querySelector('header');
+    if (!header) return;
+    const nav = header.querySelector('nav');
+    const navToggle = header.querySelector('.nav-toggle');
+    if (
+      header.classList.contains('nav-open') &&
+      !nav.contains(e.target) &&
+      !navToggle.contains(e.target)
+    ) {
+      header.classList.remove('nav-open');
+    }
+  }, true);
+});
+
 </script>
 </body>
 </html>
