--- a/cart.html
+++ b/cart.html
@@ -80,13 +80,28 @@
       font-weight: bold;
       color: #3E9F50;
     }
+    /* --- Actions (Buttons) --- */
     .actions {
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
       margin-top: 30px;
+      margin-bottom: 36px;
+      width: 100%;
+    }
+    .actions .btn,
+    .actions .btn-clear {
+      min-width: 120px;
+      max-width: 170px;
+      width: auto !important;
+      font-size: 1em;
+      padding: 9px 18px;
+      margin: 0;
+      display: inline-block;
+      box-sizing: border-box;
     }
     .btn {
-      padding: 14px 36px;
-      font-size: 1.08em;
       border: none;
       border-radius: 8px;
       color: #fff;
@@ -97,9 +112,6 @@
       letter-spacing: 0.5px;
       text-decoration: none;
       transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
-      margin-top: 18px;
-      margin-bottom: 6px;
-      display: inline-block;
     }
     .btn:hover {
       background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%);
@@ -107,20 +119,7 @@
       transform: translateY(-2px) scale(1.03);
       box-shadow: 0 6px 20px rgba(247,183,51, 0.20);
     }
-    .btn-clear {
-      margin-left: 18px;
-      margin-top: 18px;
-      margin-bottom: 6px;
-    }
-    @media (min-width: 701px) {
-      th {
-        white-space: normal;
-        text-overflow: unset;
-        overflow: visible;
-        max-width: none;
-        word-break: break-word;
-      }
-    }
+    /* Responsive: stack buttons on mobile */
     @media (max-width: 700px) {
       .container {
         width: 100vw !important;
@@ -159,53 +158,63 @@
         min-width: 100px !important;
         max-width: 180px !important;
       }
-      .btn, .btn-clear { width: 100%; margin: 10px 0; }
+      .actions {
+        flex-direction: column !important;
+        align-items: center !important;
+        gap: 12px !important;
+      }
+      .actions .btn,
+      .actions .btn-clear {
+        width: 80vw !important;
+        max-width: 96vw !important;
+        min-width: 0 !important;
+        font-size: 1em;
+      }
     }
     @media (max-width: 900px) {
       .container { padding: 18px 5vw; }
       table th, table td { font-size: 0.98em; }
       .btn, .btn-clear { width: 100%; margin: 10px 0; }
     }
-  
-@media (max-width: 700px) {
-  .container {
-    width: 100vw !important;
-    max-width: 100vw !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box !important;
-  }
-  .table-wrapper {
-    overflow-x: auto !important;
-    -webkit-overflow-scrolling: touch;
-  }
-  th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit {
-    display: none !important;
-  }
-  td.product-col {
-    width: 40% !important;
-    min-width: 80px !important;
-    max-width: 140px !important;
-  }
-  table {
-    table-layout: fixed !important;
-  }
-  th, td {
-    padding: 8px 6px !important;
-    font-size: 0.9em !important;
-  }
-  .checkout-actions {
-    flex-direction: column !important;
-    align-items: stretch !important;
-    gap: 10px !important;
-  }
-  .checkout-actions a, .checkout-actions button {
-    width: 100% !important;
-    min-width: 0 !important;
-  }
-}
-
-</style>
+    @media (max-width: 700px) {
+      .container {
+        width: 100vw !important;
+        max-width: 100vw !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        box-sizing: border-box !important;
+      }
+      .table-wrapper {
+        overflow-x: auto !important;
+        -webkit-overflow-scrolling: touch;
+      }
+      th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit {
+        display: none !important;
+      }
+      td.product-col {
+        width: 40% !important;
+        min-width: 80px !important;
+        max-width: 140px !important;
+      }
+      table {
+        table-layout: fixed !important;
+      }
+      th, td {
+        padding: 8px 6px !important;
+        font-size: 0.9em !important;
+      }
+      .actions {
+        flex-direction: column !important;
+        align-items: center !important;
+        gap: 12px !important;
+      }
+      .actions .btn, .actions .btn-clear {
+        width: 80vw !important;
+        max-width: 96vw !important;
+        min-width: 0 !important;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -245,7 +254,6 @@
     <div class="actions">
       <a class="btn" href="checkout.html">Proceed to Checkout</a>
       <button class="btn btn-clear" id="clearCartBtn" type="button" style="display:none;">Clear Cart</button>
-      <div style="margin-bottom:36px;"></div>
     </div>
   </div>
   <script>
@@ -287,25 +295,23 @@
 
     window.onload = loadCart;
     clearCartBtn.addEventListener("click", clearCart);
-  
 
-document.addEventListener('DOMContentLoaded', function() {
-  document.body.addEventListener('click', function(e) {
-    const header = document.querySelector('header');
-    if (!header) return;
-    const nav = header.querySelector('nav');
-    const navToggle = header.querySelector('.nav-toggle');
-    if (
-      header.classList.contains('nav-open') &&
-      !nav.contains(e.target) &&
-      !navToggle.contains(e.target)
-    ) {
-      header.classList.remove('nav-open');
-    }
-  }, true);
-});
-
-</script>
+    document.addEventListener('DOMContentLoaded', function() {
+      document.body.addEventListener('click', function(e) {
+        const header = document.querySelector('header');
+        if (!header) return;
+        const nav = header.querySelector('nav');
+        const navToggle = header.querySelector('.nav-toggle');
+        if (
+          header.classList.contains('nav-open') &&
+          !nav.contains(e.target) &&
+          !navToggle.contains(e.target)
+        ) {
+          header.classList.remove('nav-open');
+        }
+      }, true);
+    });
+  </script>
   <footer>
     &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
   </footer>
