--- a/calculator.html
+++ b/calculator.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Solar Kit Calculator - WattSun Solar</title>
-  <link rel="stylesheet" href="main.css"/>
-  <style>
+<meta charset="utf-8"/>
+<title>Solar Kit Calculator - WattSun Solar</title>
+<link href="main.css" rel="stylesheet"/>
+<style>
     body { background:#fafafa; }
     .container {
       width: 100%;
@@ -153,114 +154,149 @@
       }
     }
   </style>
-</head>
+<style>
+@media (max-width: 768px) {
+  .nav-toggle {
+    display: block;
+    font-size: 1.8em;
+    background: none;
+    border: none;
+    color: white;
+  }
+  header nav {
+    display: none;
+    flex-direction: column;
+    background-color: #ffb347;
+    width: 100%;
+    text-align: center;
+  }
+  header.nav-open nav {
+    display: flex;
+  }
+}
+
+input[type="number"] {
+  width: 100%;
+  padding: 6px;
+  font-size: 1em;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+</style></head>
 <body>
 <header>
-  <div class="header-bar">
-    <h1>WattSun Solar</h1>
-    <button class="nav-toggle" aria-label="Menu" onclick="toggleNav()">&#9776;</button>
-  </div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="solutions.html">Solutions</a>
-    <a href="shop.html">Shop</a>
-    <a href="calculator.html">Calculator</a>
-    <a href="financing.html">Financing</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Menu" class="nav-toggle" onclick="toggleNav()">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="calculator.html">Calculator</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
 </header>
-  <div class="container">
-    <!-- TITLE AND SIZING TABLE BUTTON ROW -->
-    <div style="display:flex; align-items:center; justify-content:center; gap:18px; margin-bottom:16px;">
-      <h2 style="margin-bottom:0; font-size:2.1em; font-weight:700; color:#222;">Solar Kit Calculator</h2>
-      <button type="button" id="showSizingBtn"
-        style="background:linear-gradient(90deg,#fcf6ba 0%,#f7b733 100%);
+<div class="container">
+<!-- TITLE AND SIZING TABLE BUTTON ROW -->
+<div style="display:flex; align-items:center; justify-content:center; gap:18px; margin-bottom:16px;">
+<h2 style="margin-bottom:0; font-size:2.1em; font-weight:700; color:#222;">Solar Kit Calculator</h2>
+<button id="showSizingBtn" style="background:linear-gradient(90deg,#fcf6ba 0%,#f7b733 100%);
         color:#184211; font-size:1.07em; font-weight:600;
         border:none; border-radius:1.5em; box-shadow:0 2px 8px rgba(247,183,51,0.07);
-        padding:8px 22px; cursor:pointer; transition:background 0.13s, color 0.13s;">
+        padding:8px 22px; cursor:pointer; transition:background 0.13s, color 0.13s;" type="button">
         Sizing Table
       </button>
-    </div>
-    <p style="text-align:center; color:#666; margin-bottom:30px; font-size:1.13em;">
+</div>
+<p style="text-align:center; color:#666; margin-bottom:30px; font-size:1.13em;">
       Select the appliances you want to power, then click <b>Calculate</b> to see the best solar kit for your needs!
     </p>
-    <form id="solarForm" class="calculator-form" autocomplete="off">
-      <!-- Lighting & Devices (expanded) -->
-      <div class="calc-section" id="section-lighting">
-        <div class="calc-section-header" onclick="toggleSection('section-lighting')">
-          <span class="calc-chevron" id="chevron-lighting">&#9660;</span> Lighting & Devices
+<form autocomplete="off" class="calculator-form" id="solarForm">
+<!-- Lighting & Devices (expanded) -->
+<div class="calc-section" id="section-lighting">
+<div class="calc-section-header" onclick="toggleSection('section-lighting')">
+<span class="calc-chevron" id="chevron-lighting">▼</span> Lighting &amp; Devices
         </div>
-        <div class="calc-section-body calc-grid">
-          <label for="led_bulb">LED Bulbs</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="led_bulb" id="led_bulb" oninput="sanitizeInput(this)" />
-          <label for="tv">TV</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="tv" id="tv" oninput="sanitizeInput(this)" />
-          <label for="laptop">Laptop</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="laptop" id="laptop" oninput="sanitizeInput(this)" />
-          <label for="phone">Phone Charging</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="phone" id="phone" oninput="sanitizeInput(this)" />
-          <label for="radio">Radio</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="radio" id="radio" oninput="sanitizeInput(this)" />
-          <label for="fan">Fan</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="fan" id="fan" oninput="sanitizeInput(this)" />
-          <label for="cctv">CCTV/Security System</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="cctv" id="cctv" oninput="sanitizeInput(this)" />
+<div class="calc-section-body calc-grid">
+<label for="led_bulb">LED Bulbs</label>
+<input id="led_bulb" min="0" name="led_bulb" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="tv">TV</label>
+<input id="tv" min="0" name="tv" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="laptop">Laptop</label>
+<input id="laptop" min="0" name="laptop" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="phone">Phone Charging</label>
+<input id="phone" min="0" name="phone" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="radio">Radio</label>
+<input id="radio" min="0" name="radio" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="fan">Fan</label>
+<input id="fan" min="0" name="fan" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="cctv">CCTV/Security System</label>
+<input id="cctv" min="0" name="cctv" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+</div>
+</div>
+<!-- Kitchen Appliances (collapsed by default) -->
+<div class="calc-section collapsed" id="section-kitchen">
+<div class="calc-section-header" onclick="toggleSection('section-kitchen')">
+<span class="calc-chevron" id="chevron-kitchen">▼</span> Kitchen Appliances
         </div>
-      </div>
-      <!-- Kitchen Appliances (collapsed by default) -->
-      <div class="calc-section collapsed" id="section-kitchen">
-        <div class="calc-section-header" onclick="toggleSection('section-kitchen')">
-          <span class="calc-chevron" id="chevron-kitchen">&#9660;</span> Kitchen Appliances
+<div class="calc-section-body calc-grid">
+<label for="fridge">Fridge</label>
+<input id="fridge" min="0" name="fridge" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="kettle">Kettle</label>
+<input id="kettle" min="0" name="kettle" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="cooker">Cooker/Hotplate</label>
+<input id="cooker" min="0" name="cooker" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="microwave">Microwave</label>
+<input id="microwave" min="0" name="microwave" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="oven">Electric Oven</label>
+<input id="oven" min="0" name="oven" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="freezer">Deep Freezer</label>
+<input id="freezer" min="0" name="freezer" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="washer">Washing Machine</label>
+<input id="washer" min="0" name="washer" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+</div>
+</div>
+<!-- Heavy Loads (collapsed by default) -->
+<div class="calc-section collapsed" id="section-heavy">
+<div class="calc-section-header" onclick="toggleSection('section-heavy')">
+<span class="calc-chevron" id="chevron-heavy">▼</span> Heavy Loads
         </div>
-        <div class="calc-section-body calc-grid">
-          <label for="fridge">Fridge</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="fridge" id="fridge" oninput="sanitizeInput(this)" />
-          <label for="kettle">Kettle</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="kettle" id="kettle" oninput="sanitizeInput(this)" />
-          <label for="cooker">Cooker/Hotplate</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="cooker" id="cooker" oninput="sanitizeInput(this)" />
-          <label for="microwave">Microwave</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="microwave" id="microwave" oninput="sanitizeInput(this)" />
-          <label for="oven">Electric Oven</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="oven" id="oven" oninput="sanitizeInput(this)" />
-          <label for="freezer">Deep Freezer</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="freezer" id="freezer" oninput="sanitizeInput(this)" />
-          <label for="washer">Washing Machine</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="washer" id="washer" oninput="sanitizeInput(this)" />
-        </div>
-      </div>
-      <!-- Heavy Loads (collapsed by default) -->
-      <div class="calc-section collapsed" id="section-heavy">
-        <div class="calc-section-header" onclick="toggleSection('section-heavy')">
-          <span class="calc-chevron" id="chevron-heavy">&#9660;</span> Heavy Loads
-        </div>
-        <div class="calc-section-body calc-grid">
-          <label for="pump">Water Pump (small)</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="pump" id="pump" oninput="sanitizeInput(this)" />
-          <label for="iron">Iron Box</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="iron" id="iron" oninput="sanitizeInput(this)" />
-          <label for="heater">Water Heater</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="heater" id="heater" oninput="sanitizeInput(this)" />
-          <label for="ac">AC (Split Unit)</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="ac" id="ac" oninput="sanitizeInput(this)" />
-          <label for="tools">Power Tools</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="tools" id="tools" oninput="sanitizeInput(this)" />
-          <label for="borehole">Borehole Pump</label>
-          <input type="number" min="0" step="1" pattern="\d*" value="0" name="borehole" id="borehole" oninput="sanitizeInput(this)" />
-        </div>
-      </div>
-      <button type="button" class="loan-btn" style="width:100%; font-size:1.1em; font-weight:600; margin-top:22px;" onclick="calculateKit()">Calculate</button>
-    </form>
-    <div id="result" class="form-section" style="display:none; text-align:center; margin-top:26px;"></div>
-    <div class="form-note">
+<div class="calc-section-body calc-grid">
+<label for="pump">Water Pump (small)</label>
+<input id="pump" min="0" name="pump" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="iron">Iron Box</label>
+<input id="iron" min="0" name="iron" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="heater">Water Heater</label>
+<input id="heater" min="0" name="heater" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="ac">AC (Split Unit)</label>
+<input id="ac" min="0" name="ac" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="tools">Power Tools</label>
+<input id="tools" min="0" name="tools" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+<label for="borehole">Borehole Pump</label>
+<input id="borehole" min="0" name="borehole" oninput="sanitizeInput(this)" pattern="\d*" step="1" type="number" value="0"/>
+</div>
+</div>
+<button class="loan-btn" onclick="calculateKit()" style="width:100%; font-size:1.1em; font-weight:600; margin-top:22px;" type="button">Calculate</button>
+</form>
+<div class="form-section" id="result" style="display:none; text-align:center; margin-top:26px;"></div>
+<div class="form-note">
       * This is an indicative estimate. Actual system sizing may vary.
     </div>
-  </div>
+</div>
 <footer>
-    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+<footer>
+<div style="background: #ffb347; padding: 20px; text-align: center;">
+<p style="margin: 0; font-weight: 600;">© 2025 WattSun Solar Kenya | 
+      <span class="footer-contacts">
+<a href="mailto:info@wattsun.co.ke" style="color: black; text-decoration: none;">info@wattsun.co.ke</a>
+</span>
+</p>
+</div>
 </footer>
-
+</footer>
 <!-- Sizing Table Side Panel -->
 <div id="sizingPanel" style="
   position:fixed; top:0; right:-420px; width:390px; height:100vh; z-index:2001;
@@ -268,53 +304,52 @@
   overflow-y:auto; transition:right 0.28s cubic-bezier(.73,.11,.41,.95);
   padding:28px 19px 22px 19px; display:flex; flex-direction:column; gap:0;
   ">
-  <button type="button" id="closeSizingPanel" style="position:absolute; top:15px; right:18px; background:transparent; border:none; font-size:2em; color:#ccb147; cursor:pointer;">&times;</button>
-  <h3 style="text-align:center; font-size:1.32em; font-weight:700; color:#b39708; margin-bottom:18px;">WattSun Solar Kit Sizing Table</h3>
-  <div style="overflow-x:auto;">
-    <table style="width:100%; border-collapse:collapse; font-size:0.97em;">
-      <thead style="background: #fff7cd;">
-        <tr style="color:#85620c; font-weight:bold;">
-          <th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Kit Size</th>
-          <th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Use Case</th>
-          <th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Example Appliances</th>
-        </tr>
-      </thead>
-      <tbody style="background: #fff;">
-        <tr>
-          <td style="padding:7px 6px; font-weight:600;">1 kW</td>
-          <td style="padding:7px 6px;">Small home, bedsitter, small shop, basic backup</td>
-          <td style="padding:7px 6px;">6 LED bulbs, TV, phone/laptop, Wi-Fi, POS, small fridge</td>
-        </tr>
-        <tr style="background:#fffbeee7;">
-          <td style="padding:7px 6px; font-weight:600;">3 kW</td>
-          <td style="padding:7px 6px;">Medium home, small office, kiosk, essential business</td>
-          <td style="padding:7px 6px;">All above + microwave/iron/freezer; Up to 2 fridges, POS, CCTV</td>
-        </tr>
-        <tr>
-          <td style="padding:7px 6px; font-weight:600;">6 kW</td>
-          <td style="padding:7px 6px;">Large home, small business, restaurant, critical backup</td>
-          <td style="padding:7px 6px;">All above + 2-3 kitchen appliances (fridge, freezer, microwave, fryer); Computers, CCTV, Wi-Fi</td>
-        </tr>
-        <tr style="background:#fffbeee7;">
-          <td style="padding:7px 6px; font-weight:600;">9 kW</td>
-          <td style="padding:7px 6px;">Large home, mid-size business, fast food with partial kitchen</td>
-          <td style="padding:7px 6px;">All above + 3 kitchen devices at once; Commercial freezer, fryer, coffee machine</td>
-        </tr>
-        <tr>
-          <td style="padding:7px 6px; font-weight:600;">12 kW</td>
-          <td style="padding:7px 6px;">Large business, full backup for fast food/supermarket</td>
-          <td style="padding:7px 6px;">All above + multiple fryers/ovens/fridges; full IT, CCTV, AC, coffee, and more</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div style="text-align:center; margin-top:14px; color:#887b19; font-size:0.97em;">
+<button id="closeSizingPanel" style="position:absolute; top:15px; right:18px; background:transparent; border:none; font-size:2em; color:#ccb147; cursor:pointer;" type="button">×</button>
+<h3 style="text-align:center; font-size:1.32em; font-weight:700; color:#b39708; margin-bottom:18px;">WattSun Solar Kit Sizing Table</h3>
+<div style="overflow-x:auto;">
+<table style="width:100%; border-collapse:collapse; font-size:0.97em;">
+<thead style="background: #fff7cd;">
+<tr style="color:#85620c; font-weight:bold;">
+<th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Kit Size</th>
+<th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Use Case</th>
+<th style="padding:8px 6px; border-bottom:2px solid #ffe58f;">Example Appliances</th>
+</tr>
+</thead>
+<tbody style="background: #fff;">
+<tr>
+<td style="padding:7px 6px; font-weight:600;">1 kW</td>
+<td style="padding:7px 6px;">Small home, bedsitter, small shop, basic backup</td>
+<td style="padding:7px 6px;">6 LED bulbs, TV, phone/laptop, Wi-Fi, POS, small fridge</td>
+</tr>
+<tr style="background:#fffbeee7;">
+<td style="padding:7px 6px; font-weight:600;">3 kW</td>
+<td style="padding:7px 6px;">Medium home, small office, kiosk, essential business</td>
+<td style="padding:7px 6px;">All above + microwave/iron/freezer; Up to 2 fridges, POS, CCTV</td>
+</tr>
+<tr>
+<td style="padding:7px 6px; font-weight:600;">6 kW</td>
+<td style="padding:7px 6px;">Large home, small business, restaurant, critical backup</td>
+<td style="padding:7px 6px;">All above + 2-3 kitchen appliances (fridge, freezer, microwave, fryer); Computers, CCTV, Wi-Fi</td>
+</tr>
+<tr style="background:#fffbeee7;">
+<td style="padding:7px 6px; font-weight:600;">9 kW</td>
+<td style="padding:7px 6px;">Large home, mid-size business, fast food with partial kitchen</td>
+<td style="padding:7px 6px;">All above + 3 kitchen devices at once; Commercial freezer, fryer, coffee machine</td>
+</tr>
+<tr>
+<td style="padding:7px 6px; font-weight:600;">12 kW</td>
+<td style="padding:7px 6px;">Large business, full backup for fast food/supermarket</td>
+<td style="padding:7px 6px;">All above + multiple fryers/ovens/fridges; full IT, CCTV, AC, coffee, and more</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div style="text-align:center; margin-top:14px; color:#887b19; font-size:0.97em;">
     *For indicative purposes. Final kit sizing should be confirmed after site survey.
   </div>
 </div>
 <!-- Overlay for side panel -->
 <div id="sizingOverlay"></div>
-
 <script>
   // Hamburger nav for mobile
   function toggleNav() {
@@ -442,5 +477,9 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 
 </script>
-</body>
+<script>
+function toggleNav() {
+  document.querySelector('header').classList.toggle('nav-open');
+}
+</script></body>
 </html>
