--- a/calculator.html
+++ b/calculator.html
@@ -286,7 +286,7 @@ input[type="number"] {
       * This is an indicative estimate. Actual system sizing may vary.
     </div>
 </div>
-
+<footer></footer>
 <!-- Sizing Table Side Panel -->
 <div id="sizingPanel" style="
   position:fixed; top:0; right:-420px; width:390px; height:100vh; z-index:2001;
@@ -473,14 +473,11 @@ function toggleNav() {
 }
 </script>
 <footer>
-<div style="background: linear-gradient(90deg, #ffc371 0%, #ffb347 100%); padding: 20px; text-align: center;">
-<p style="margin: 0; font-weight: 600; color: black;">
-      © 2025 WattSun Solar Kenya |
-      <span class="footer-contacts">
-<a href="mailto:info@wattsun.co.ke" style="color: black; text-decoration: none;">info@wattsun.co.ke</a>
-</span>
-</p>
-</div>
+    © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
 </footer>
-</body>
+<script>
+    function toggleNav() {
+      document.querySelector('header').classList.toggle('nav-open');
+    }
+    </script></body>
 </html>
