--- a/calculator.html
+++ b/calculator.html
@@ -219,6 +219,36 @@ input[type="number"] {
     gap: 8px 0 !important;
   }
 }
+</style><style>
+/* Ensure consistent width and alignment */
+.calculator-form input[type="number"],
+.calculator-form button.loan-btn {
+  width: 94%;
+  margin: 0 auto 12px auto;
+  display: block;
+  border-radius: 24px;
+}
+
+/* Adjust calculate button padding and look */
+button.loan-btn {
+  padding: 14px 0;
+  font-size: 1.1em;
+  font-weight: 600;
+  border: none;
+  background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
+  box-shadow: 0 2px 14px rgba(247,183,51,0.11);
+  color: #184211;
+  cursor: pointer;
+  transition: background 0.15s, color 0.12s, transform 0.1s;
+}
+
+/* Match Buy Now button container */
+.calc-btn-row button,
+.calc-btn-row a {
+  width: 94%;
+  margin: 0 auto;
+  display: block;
+}
 </style></head>
 <body>
 <header>
