--- a/calculator.html
+++ b/calculator.html
@@ -249,6 +249,24 @@ button.loan-btn {
   margin: 0 auto;
   display: block;
 }
+</style><style>
+/* Unify input and button widths to match Buy Now block */
+.calculator-form input[type="number"],
+button.loan-btn {
+  width: 94% !important;
+  max-width: 350px;
+  margin: 0 auto 12px auto;
+  display: block;
+  border-radius: 24px;
+}
+
+/* Ensure Buy Now and Back buttons are the same width */
+.calc-btn-row button,
+.calc-btn-row a {
+  width: 94% !important;
+  max-width: 350px;
+  margin: 0 auto;
+}
 </style></head>
 <body>
 <header>
