--- a/calculator.html
+++ b/calculator.html
@@ -322,7 +322,7 @@ button.loan-btn {
 </div>
 </div>
 <!-- Kitchen Appliances (collapsed by default) -->
-<div class="calc-section collapsed" id="section-kitchen">
+<div class="calc-section collapsed collapsed" id="section-kitchen">
 <div class="calc-section-header" onclick="toggleSection('section-kitchen')">
 <span class="calc-chevron" id="chevron-kitchen">▼</span> Kitchen Appliances
         </div>
@@ -344,7 +344,7 @@ button.loan-btn {
 </div>
 </div>
 <!-- Heavy Loads (collapsed by default) -->
-<div class="calc-section collapsed" id="section-heavy">
+<div class="calc-section collapsed collapsed" id="section-heavy">
 <div class="calc-section-header" onclick="toggleSection('section-heavy')">
 <span class="calc-chevron" id="chevron-heavy">▼</span> Heavy Loads
         </div>
