--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,54 @@
       .map { height: 200px; }
     }
   </style>
-</head>
+<style>
+/* Fully responsive and rounded input rows */
+.contact-form input,
+.contact-form textarea {
+  width: 94%;
+  max-width: 350px;
+  margin: 0 auto 18px auto;
+  display: block;
+  border-radius: 12px;
+  padding: 13px 10px;
+  font-size: 1em;
+  background: #faf9f7;
+  box-sizing: border-box;
+}
+
+/* Match the "Calculate" button style from calculator.html */
+.contact-form button {
+  width: 94%;
+  max-width: 350px;
+  margin: 0 auto;
+  padding: 14px 0;
+  font-size: 1.1em;
+  font-weight: 600;
+  border: none;
+  border-radius: 24px;
+  color: #184211;
+  background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
+  box-shadow: 0 2px 14px rgba(247,183,51,0.11);
+  transition: background 0.15s, color 0.12s, transform 0.1s;
+  cursor: pointer;
+  display: block;
+  text-align: center;
+}
+
+.contact-form button:hover {
+  background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%);
+  color: #b37900 !important;
+  transform: translateY(-1px) scale(1.02);
+}
+
+/* Ensure mobile layout spacing */
+@media (max-width: 768px) {
+  .contact-form label {
+    text-align: left;
+    padding-left: 5%;
+  }
+}
+</style></head>
 <body>
 <!-- Header: Unchanged -->
 <header>
@@ -104,9 +151,9 @@
 <form data-netlify="true" method="POST" name="contact">
 <input name="form-name" type="hidden" value="contact"/>
 <label for="name">Full Name</label>
-<input id="name" name="name" placeholder="Your name" required="" type="text">
+<input id="name" name="name" placeholder="Your name" required="" type="text"/>
 <label for="email">Email Address</label>
-<input id="email" name="email" placeholder="you@example.com" required="" type="email"/>
+<input id="email" name="email" placeholder="you@example.com" required="" type="email">
 <label for="phone">Phone Number</label>
 <input id="phone" name="phone" placeholder="+254 7XX XXX XXX" type="tel"/>
 <label for="message">Your Message</label>
@@ -135,7 +182,6 @@
 <footer>
     © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
 </footer>
-
 <script>
   const navToggle = document.querySelector('.nav-toggle');
   const header = document.querySelector('header');
