--- a/contact.html
+++ b/contact.html
@@ -164,6 +164,10 @@
   color: #b37900 !important;
   transform: translateY(-1px) scale(1.02);
 }
+</style><style>
+.contact-info {
+  text-align: left;
+}
 </style></head>
 <body>
 <!-- Header: Unchanged -->
@@ -193,11 +197,11 @@
 <label for="email">Email Address</label>
 <input id="email" name="email" placeholder="you@example.com" required="" type="email"/>
 <label for="phone">Phone Number</label>
-<input id="phone" name="phone" placeholder="+254 7XX XXX XXX" type="tel">
+<input id="phone" name="phone" placeholder="+254 7XX XXX XXX" type="tel"/>
 <label for="message">Your Message</label>
 <textarea id="message" name="message" placeholder="Tell us about your project..." required="" rows="6"></textarea>
 <button type="submit">Send Inquiry</button>
-</input></form>
+</form>
 </div>
 <div class="contact-info">
 <h3>Our Office</h3>
