--- a/contact.html
+++ b/contact.html
@@ -168,6 +168,16 @@
 .contact-info {
   text-align: left;
 }
+</style><style>
+/* Stretch form inputs to full width in the container on desktop */
+@media (min-width: 901px) {
+  .contact-form input,
+  .contact-form textarea {
+    width: 100% !important;
+    max-width: 100% !important;
+    border-radius: 12px;
+  }
+}
 </style></head>
 <body>
 <!-- Header: Unchanged -->
