--- a/calculator.html
+++ b/calculator.html
@@ -369,6 +369,31 @@ button.loan-btn {
 <div class="form-note">
       * This is an indicative estimate. Actual system sizing may vary.
     </div>
+<div style="text-align: center; margin-top: 24px;">
+<button id="addToCartBtn" style="width: 94%; max-width: 350px; padding: 14px 0; font-size: 1.1em; font-weight: 600; border: none; border-radius: 24px; color: #184211; background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%); box-shadow: 0 2px 14px rgba(247,183,51,0.11); transition: background 0.15s, color 0.12s, transform 0.1s; cursor: pointer;">
+    Add to Cart
+  </button>
+</div>
+<script>
+document.getElementById("addToCartBtn").addEventListener("click", function() {
+  const stored = localStorage.getItem('wattSunSelectedKit');
+  if (stored) {
+    const kit = JSON.parse(stored);
+    const cart = JSON.parse(localStorage.getItem("wattSunCart") || "[]");
+    cart.push({
+      name: kit.kit,
+      power: kit.power,
+      price: kit.price,
+      quantity: 1
+    });
+    localStorage.setItem("wattSunCart", JSON.stringify(cart));
+    alert(kit.kit + " added to cart.");
+  } else {
+    alert("Please calculate your kit first.");
+  }
+});
+</script>
+
 </div>
 <!-- Sizing Table Side Panel -->
 <div id="sizingPanel" style="
